[package]
name = "falling"
description = "A simple game about falling."
repository = "https://github.com/simon0302010/falling"
readme = "README.md"
version = "0.3.5"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
bevy = { version = "0.16.*", features = [ "bevy_dev_tools", "mp3" ]}
bevy_rapier2d =  { version = "0.31.*", features = [ "simd-stable", "debug-render-2d" ] }
bevy_common_assets = { version = "0.13.*", features = ["ron"] }
bevy_reflect = "0.16.*"
bevy_asset = "0.16.*"
bevy_embedded_assets = "0.13.*"
rand = "0.8.5"
serde = { version = "1.0", features = [ "derive" ] }

[profile.release]
codegen-units = 1

[profile.dev.package.bevy_rapier2d]
opt-level = 3
